# risk-engine

./: .gitignore  README.md  market_data_cache.db  pyproject.toml  requirements-dev.txt  requirements.txt
Docs/: INSTALLATION.md  api_reference.md  contributing_guide.md  deployment_guide.md  development_guide.md  faq_guide.md  quickstart_guide.md  troubleshooting_guide.md
dashboard/: app.py
python_api/: app.py  example_yfinance_usage.py  market_data_fetcher.py  setup.py
risk_engine/: __init__.py
risk_engine/core/: __init__.py  binomial.py  blackscholes.py  exotic.py  jump_diffusion.py
risk_engine/instruments/: __init__.py  american.py  asian.py  barrier.py  base.py  european.py
risk_engine/market_data/: __init__.py  cache.py  fetcher.py  market_data.py
risk_engine/portfolio/: __init__.py  portfolio.py  risk_engine.py
risk_engine/utils/: __init__.py  validation.py
tests/: test_blackscholes.py
